# tauri-app-with-cc

./: .eslintrc.json  .gitignore  .prettierrc  CLAUDE.md  package.json  tailwind.config.js  tcp_echo_server.py
.backup/components/ConnectionPanel/: ConnectionPanel.svelte  SerialConfig.svelte  TcpConfig.svelte
.backup/components/Terminal/: Terminal.svelte  TerminalInput.svelte  TerminalOutput.svelte
.backup/stores/: index.ts  terminal.ts
.claude/agents/: backend-engineer.md  frontend-engineer.md  system-architect.md
.tmp/: design.md  requirements.md  tailwind-setup.md  tasks.md
docs/: guidelines.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mod.rs  settings.rs  terminal.rs
src-tauri/src/communication/: mod.rs  serial.rs  tcp.rs  tests.rs
src-tauri/src/models/: connection.rs  mod.rs  settings.rs  terminal.rs
src-tauri/src/services/: mod.rs
src-tauri/src/utils/: mod.rs
src/lib/: stores.ts  types.ts  utils.ts
src/lib/components/ConnectionPanel/: ConnectionPanel.svelte  SerialConfig.svelte  TcpConfig.svelte
src/lib/components/Terminal/: Terminal.svelte  TerminalInput.svelte  TerminalOutput.svelte
src/lib/components/connection/: ConnectionForm.svelte  ConnectionPanel.svelte  ConnectionStatus.svelte
src/lib/components/layout/: AppShell.svelte  Sidebar.svelte
src/lib/components/terminal/: InputArea.svelte  (+3 more)
src/lib/stores/: connection.ts  settings.ts
src/lib/types/: connection.ts  index.ts  settings.ts  terminal.ts
src/routes/: +layout.svelte  +page.svelte
